--- a/test.ipynb
+++ b/test.ipynb
@@ -318,164 +318,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing DocumentIntelligenceClient with endpoint: https://mayesgprojec...\n",
-      "Sending request to analyze document from URL: https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf using model: prebuilt-layout\n",
-      "\n",
-      "An HTTP error occurred: 404\n",
-      "Error Code: 404\n",
-      "Error Message: Resource not found\n",
-      "This is a 'Resource not found' error.\n",
-      "Please double-check:\n",
-      "1. Endpoint: 'https://mayesgproject.cognitiveservices.azure.com/' is correct and the service exists.\n",
-      "2. Model ID: 'prebuilt-layout' is valid for your endpoint and resource.\n",
-      "3. Document URL/Path: 'https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf' (or path) is accessible.\n",
-      "4. API Key: Ensure it's correct and has permissions for the specified endpoint/resource.\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from azure.core.credentials import AzureKeyCredential\n",
-    "from azure.core.exceptions import HttpResponseError\n",
-    "from azure.ai.documentintelligence import DocumentIntelligenceClient\n",
-    "from azure.ai.documentintelligence.models import AnalyzeDocumentRequest\n",
-    "\n",
-    "# --- กรุณาใส่ค่าเหล่านี้ ---\n",
-    "# ดูได้จาก Azure Portal -> Cognitive Services -> [ชื่อ Resource ของคุณ] -> Keys and Endpoint\n",
-    "AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT = \"https://mayesgproject.cognitiveservices.azure.com/\"\n",
-    "AZURE_DOCUMENT_INTELLIGENCE_KEY = \"FsyV77ZBSIK9UxlOmECm6Q9TBb0zrugt9ZRdH2ji1d6moQDrN2PqJQQJ99BFACqBBLyXJ3w3AAALACOGg4WL\"\n",
-    "\n",
-    "# Model ID ที่ต้องการทดสอบ\n",
-    "# สำหรับโมเดลพื้นฐาน ลองใช้:\n",
-    "# \"prebuilt-read\" -> สำหรับ OCR\n",
-    "# \"prebuilt-layout\" -> สำหรับโครงสร้างเอกสาร, ตาราง, ข้อความ\n",
-    "# \"prebuilt-document\" -> สำหรับการดึงข้อมูลทั่วไป (key-value pairs)\n",
-    "# หากเป็น custom model ให้ใส่ ID ของ custom model ของคุณ\n",
-    "MODEL_ID = \"prebuilt-layout\"\n",
-    "\n",
-    "# URL ของเอกสาร PDF ที่ต้องการทดสอบ (ต้องเป็น URL ที่เข้าถึงได้แบบสาธารณะ)\n",
-    "# ตัวอย่าง: คุณสามารถอัปโหลด PDF ของคุณไปยัง Azure Blob Storage แล้วใช้ URL นั้น\n",
-    "# หรือหา PDF ตัวอย่างออนไลน์ เช่น:\n",
-    "DOCUMENT_URL = \"https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf\"\n",
-    "# หรือถ้าต้องการทดสอบไฟล์ในเครื่อง (ยกตัวอย่าง)\n",
-    "# DOCUMENT_PATH = \"path/to/your/local/document.pdf\"\n",
-    "\n",
-    "def analyze_document_from_url():\n",
-    "    print(f\"Initializing DocumentIntelligenceClient with endpoint: {AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT[:20]}...\")\n",
-    "    try:\n",
-    "        document_intelligence_client = DocumentIntelligenceClient(\n",
-    "            endpoint=AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT,\n",
-    "            credential=AzureKeyCredential(AZURE_DOCUMENT_INTELLIGENCE_KEY)\n",
-    "        )\n",
-    "\n",
-    "        print(f\"Sending request to analyze document from URL: {DOCUMENT_URL} using model: {MODEL_ID}\")\n",
-    "\n",
-    "        # สร้าง request object\n",
-    "        # สำหรับการวิเคราะห์จาก URL\n",
-    "        poller = document_intelligence_client.begin_analyze_document(\n",
-    "            model_id=MODEL_ID,\n",
-    "            analyze_request=AnalyzeDocumentRequest(url_source=DOCUMENT_URL)\n",
-    "        )\n",
-    "        \n",
-    "        # # หากต้องการวิเคราะห์จากไฟล์ในเครื่อง ให้ comment บรรทัดข้างบน และ uncomment ส่วนนี้:\n",
-    "        # with open(DOCUMENT_PATH, \"rb\") as f:\n",
-    "        #     poller = document_intelligence_client.begin_analyze_document(\n",
-    "        #         model_id=MODEL_ID,\n",
-    "        #         analyze_request=f # ส่ง binary content โดยตรง\n",
-    "        #         # content_type=\"application/octet-stream\" # Optional, SDK มักจะ detect ได้\n",
-    "        #     )\n",
-    "\n",
-    "        result = poller.result() # รอให้การวิเคราะห์เสร็จสิ้น\n",
-    "\n",
-    "        print(\"\\n---- Analysis Results ----\")\n",
-    "        if result.pages:\n",
-    "            print(f\"Document has {len(result.pages)} page(s).\")\n",
-    "            for i, page in enumerate(result.pages):\n",
-    "                print(f\"\\n--- Page #{i + 1} ---\")\n",
-    "                print(f\"  Dimensions: {page.width}x{page.height} {page.unit}\")\n",
-    "                if page.lines:\n",
-    "                    print(f\"  Found {len(page.lines)} lines.\")\n",
-    "                    # พิมพ์ 3 บรรทัดแรกเป็นตัวอย่าง\n",
-    "                    for line_idx, line in enumerate(page.lines[:3]):\n",
-    "                        print(f\"    Line {line_idx + 1}: '{line.content}'\")\n",
-    "                if page.tables:\n",
-    "                    print(f\"  Found {len(page.tables)} table(s) on page {i+1}.\")\n",
-    "                    for table_idx, table in enumerate(page.tables):\n",
-    "                        print(f\"    Table {table_idx + 1} has {table.row_count} rows and {table.column_count} columns.\")\n",
-    "\n",
-    "\n",
-    "        if result.styles and any(style.is_handwritten for style in result.styles):\n",
-    "            print(\"Detected handwritten content in the document.\")\n",
-    "        else:\n",
-    "            print(\"No handwritten content detected (or model does not support this).\")\n",
-    "\n",
-    "        print(\"\\n---- Raw Result (first 500 chars) ----\")\n",
-    "        print(str(result)[:500] + \"...\") # แสดงผลลัพธ์บางส่วน\n",
-    "\n",
-    "        print(\"\\nAnalysis completed successfully!\")\n",
-    "\n",
-    "    except HttpResponseError as e:\n",
-    "        print(f\"\\nAn HTTP error occurred: {e.status_code}\")\n",
-    "        print(f\"Error Code: {e.error.code if e.error else 'N/A'}\")\n",
-    "        print(f\"Error Message: {e.error.message if e.error else 'N/A'}\")\n",
-    "        if e.status_code == 404:\n",
-    "            print(\"This is a 'Resource not found' error.\")\n",
-    "            print(\"Please double-check:\")\n",
-    "            print(f\"1. Endpoint: '{AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT}' is correct and the service exists.\")\n",
-    "            print(f\"2. Model ID: '{MODEL_ID}' is valid for your endpoint and resource.\")\n",
-    "            print(f\"3. Document URL/Path: '{DOCUMENT_URL}' (or path) is accessible.\")\n",
-    "            print(\"4. API Key: Ensure it's correct and has permissions for the specified endpoint/resource.\")\n",
-    "        elif e.status_code == 401 or e.status_code == 403:\n",
-    "            print(\"This is an Authentication/Authorization error. Check your API Key and its permissions.\")\n",
-    "        # print(f\"Full error details: {e}\") # Uncomment for more details\n",
-    "    except Exception as e:\n",
-    "        print(f\"\\nAn unexpected error occurred: {e}\")\n",
-    "        import traceback\n",
-    "        traceback.print_exc()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # ตรวจสอบว่ามีการตั้งค่า Endpoint และ Key หรือไม่\n",
-    "    if \"YOUR_DOCUMENT_INTELLIGENCE_ENDPOINT\" in AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT or \\\n",
-    "       \"YOUR_DOCUMENT_INTELLIGENCE_KEY\" in AZURE_DOCUMENT_INTELLIGENCE_KEY:\n",
-    "        print(\"ERROR: Please update the placeholders for AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT and AZURE_DOCUMENT_INTELLIGENCE_KEY in the script.\")\n",
-    "    else:\n",
-    "        analyze_document_from_url()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preparing to upload 2 files in a single request...\n",
+      "Preparing to upload 27 files in a single request...\n",
+      "Prepared file: 99_Sustainability Reporting Guide for Listed Companies.pdf\n",
+      "Prepared file: GRI 1_ Foundation 2021.pdf\n",
       "Prepared file: GRI 201_  Economic Performance 2016.pdf\n",
       "Prepared file: GRI 202_ Market Presence 2016.pdf\n",
+      "Prepared file: GRI 205_ Anti-corruption 2016.pdf\n",
+      "Prepared file: GRI 2_ General Disclosures 2021.pdf\n",
+      "Prepared file: GRI 301_ Materials 2016.pdf\n",
+      "Prepared file: GRI 302_ Energy 2016.pdf\n",
+      "Prepared file: GRI 303_ Water and Effluents 2018.pdf\n",
+      "Prepared file: GRI 304_ Biodiversity 2016.pdf\n",
+      "Prepared file: GRI 305_ Emissions 2016.pdf\n",
+      "Prepared file: GRI 306_ Waste 2020.pdf\n",
+      "Prepared file: GRI 308_ Supplier Environmental Assessment 2016.pdf\n",
+      "Prepared file: GRI 3_ Material Topics 2021.pdf\n",
+      "Prepared file: GRI 401_ Employment 2016.pdf\n",
+      "Prepared file: GRI 403_ Occupational Health and Safety 2018.pdf\n",
+      "Prepared file: GRI 404_ Training and Education 2016.pdf\n",
+      "Prepared file: GRI 405_ Diversity and Equal Opportunity 2016.pdf\n",
+      "Prepared file: GRI 408_ Child Labor 2016.pdf\n",
+      "Prepared file: GRI 413_ Local Communities 2016.pdf\n",
+      "Prepared file: GRI 416_ Customer Health and Safety 2016.pdf\n",
+      "Prepared file: GRI 418_ Customer Privacy 2016.pdf\n",
+      "Prepared file: ISO-45001-2018.pdf\n",
+      "Prepared file: ISO-9001-2015.pdf\n",
+      "Prepared file: iso27001.pdf\n",
+      "Prepared file: ISO_14001.pdf\n",
+      "Prepared file: Packaging_sector.pdf\n",
       "\n",
-      "Uploading 2 files now...\n",
-      "Time taken to upload files: 3.8219 seconds\n",
-      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 2 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['GRI 201_  Economic Performance 2016.pdf', 'GRI 202_ Market Presence 2016.pdf'], 'neo4j_service_response': 'N/A'}\n",
+      "Uploading 27 files now...\n",
+      "Time taken to upload files: 4190.4235 seconds\n",
+      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 27 files. Question AI evolution (Auto-Detected Baseline=True) triggered.', 'original_filenames': ['99_Sustainability Reporting Guide for Listed Companies.pdf', 'GRI 1_ Foundation 2021.pdf', 'GRI 201_  Economic Performance 2016.pdf', 'GRI 202_ Market Presence 2016.pdf', 'GRI 205_ Anti-corruption 2016.pdf', 'GRI 2_ General Disclosures 2021.pdf', 'GRI 301_ Materials 2016.pdf', 'GRI 302_ Energy 2016.pdf', 'GRI 303_ Water and Effluents 2018.pdf', 'GRI 304_ Biodiversity 2016.pdf', 'GRI 305_ Emissions 2016.pdf', 'GRI 306_ Waste 2020.pdf', 'GRI 308_ Supplier Environmental Assessment 2016.pdf', 'GRI 3_ Material Topics 2021.pdf', 'GRI 401_ Employment 2016.pdf', 'GRI 403_ Occupational Health and Safety 2018.pdf', 'GRI 404_ Training and Education 2016.pdf', 'GRI 405_ Diversity and Equal Opportunity 2016.pdf', 'GRI 408_ Child Labor 2016.pdf', 'GRI 413_ Local Communities 2016.pdf', 'GRI 416_ Customer Health and Safety 2016.pdf', 'GRI 418_ Customer Privacy 2016.pdf', 'ISO-45001-2018.pdf', 'ISO-9001-2015.pdf', 'iso27001.pdf', 'ISO_14001.pdf', 'Packaging_sector.pdf']}\n",
       "Closing all file objects...\n"
      ]
     }
@@ -646,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [{'content': 'ความยั่งยืนคืออะไร?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '742d536d-3c80-459c-94f6-a05362b0a87b', 'example': False}, {'content': '            Development that meets the needs of the present without compromising the ability of future generations to meet their own needs.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--81566cec-f4d3-427f-802d-10d3c3bc881c-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 139458, 'output_tokens': 23, 'total_tokens': 139481, 'input_token_details': {'cache_read': 0}}}]}\n"
+      "{'messages': [{'content': 'What is ESG ?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '7c0e13b9-8eb6-4e93-897a-ef59b615b86e', 'example': False}, {'content': 'ESG refers to guidelines or benchmarks related to environmental, social, and governance performance with which businesses may comply.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--cf50d32c-796d-4f3e-84a4-b3b5b523098f-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 753172, 'output_tokens': 21, 'total_tokens': 753193, 'input_token_details': {'cache_read': 0}}}]}\n"
      ]
     }
    ],
@@ -665,7 +546,7 @@
     "\n",
     "# List of ESG questions\n",
     "esg_questions = [\n",
-    "    \"ความยั่งยืนคืออะไร?\"\n",
+    "    \"What is ESG ?\"\n",
     "]\n",
     "\n",
     "# Store responses\n",
@@ -674,7 +555,7 @@
     "# Posting each question to the endpoint\n",
     "for question in esg_questions:\n",
     "    payload = {\n",
-    "        \"thread_id\": \"7005\",\n",
+    "        \"thread_id\": \"7010\",\n",
     "        \"question\": question,\n",
     "        # \"prompt\": \"No matter what is asked, always answer: 'I will get back to you'\"\n",
     "    }\n",
