--- a/test.ipynb
+++ b/test.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +230,10 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  96.16320276260376\n",
+      "Time taken to upload files:  95.88045716285706\n",
       "Status Code: 202\n",
-      "Response Headers: {'date': 'Sun, 08 Jun 2025 17:59:15 GMT', 'server': 'uvicorn', 'content-length': '186', 'content-type': 'application/json'}\n",
-      "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files. Question AI evolution (Auto-Detected Baseline=True) triggered.\",\"original_filenames\":[\"GRI 202_ Market Presence 2016.pdf\"]}\n"
+      "Response Headers: {'date': 'Tue, 10 Jun 2025 17:11:36 GMT', 'server': 'uvicorn', 'content-length': '187', 'content-type': 'application/json'}\n",
+      "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files. Question AI evolution (Auto-Detected Baseline=False) triggered.\",\"original_filenames\":[\"GRI 202_ Market Presence 2016.pdf\"]}\n"
      ]
     }
    ],
@@ -527,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [{'content': 'What is ESG ?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '7c0e13b9-8eb6-4e93-897a-ef59b615b86e', 'example': False}, {'content': 'ESG refers to guidelines or benchmarks related to environmental, social, and governance performance with which businesses may comply.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--cf50d32c-796d-4f3e-84a4-b3b5b523098f-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 753172, 'output_tokens': 21, 'total_tokens': 753193, 'input_token_details': {'cache_read': 0}}}]}\n"
+      "{'messages': [{'content': 'ESG คืออะไร?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '023804b4-955a-4fa4-99a4-07530660bb25', 'example': False}, {'content': 'ESG ย่อมาจาก Environmental, Social, and Governance ซึ่งเป็นกรอบแนวทาง เกณฑ์มาตรฐาน และข้อมูลที่ใช้ในการประเมินผลการดำเนินงานและผลกระทบของธุรกิจในสามด้านสำคัญนี้ ข้อมูลที่ไม่ใช่ทางการเงินนี้ถือเป็นสิ่งจำเป็นสำหรับการตัดสินใจลงทุน ควบคู่ไปกับข้อมูลทางการเงินแบบดั้งเดิม\\n\\nองค์ประกอบหลักสามด้านของ ESG ได้แก่:\\n\\n*   **สิ่งแวดล้อม (Environmental - E)**: มิตินี้ครอบคลุมนโยบาย แผนงาน และผลการดำเนินงานของบริษัทที่เกี่ยวข้องกับผลกระทบต่อสิ่งแวดล้อมทางธรรมชาติ สะท้อนถึงประสิทธิภาพของบริษัทในการใช้พลังงานและทรัพยากร ด้านสำคัญได้แก่ นโยบายสิ่งแวดล้อมและมาตรฐานการปฏิบัติตามกฎหมาย การบริหารจัดการพลังงาน (เช่น การจัดหาและการบริโภคไฟฟ้า เชื้อเพลิงฟอสซิลอย่างมีประสิทธิภาพ) การบริหารจัดการน้ำ (เช่น การจัดหาและการบริโภคอย่างมีประสิทธิภาพ การลดความเสี่ยงของการขาดแคลน) การบริหารจัดการของเสีย (เช่น ความพยายามในการลดของเสีย การใช้ทรัพยากรอย่างมีประสิทธิภาพ) และการบริหารจัดการก๊าซเรือนกระจก (เช่น การควบคุมและลดการปล่อยก๊าซเพื่อบรรเทาผลกระทบจากการเปลี่ยนแปลงสภาพภูมิอากาศ) บริษัทจะรายงานตัวชี้วัด เช่น มูลค่าความเสียหายหรือค่าปรับจากการละเมิดกฎหมาย จำนวนเหตุการณ์ด้านสิ่งแวดล้อม ประเภทและน้ำหนักของวัสดุที่ใช้ (หมุนเวียนเทียบกับไม่หมุนเวียน) ร้อยละของวัสดุที่นำกลับมาใช้ใหม่ และการปล่อยก๊าซเรือนกระจก (ขอบเขตที่ 1, 2 และ 3)\\n\\n*   **สังคม (Social - S)**: มิตินี้มุ่งเน้นไปที่นโยบาย แผนงาน และผลการดำเนินงานด้านสังคมของบริษัท ซึ่งแสดงให้เห็นถึงการเคารพสิทธิมนุษยชนและการส่งเสริมความพึงพอใจในหมู่พนักงาน ลูกค้า ชุมชน และสังคมในวงกว้าง แง่มุมที่สำคัญได้แก่ สิทธิมนุษยชน (เช่น นโยบาย การตรวจสอบวิเคราะห์สถานะ มาตรการคุ้มครอง และเหตุการณ์การละเมิด) การปฏิบัติด้านแรงงานที่เป็นธรรม (เช่น ข้อมูลประชากรพนักงาน ความหลากหลาย และการไม่แบ่งแยก) ความรับผิดชอบต่อลูกค้า/ผู้บริโภค (เช่น การคุ้มครองข้อมูลผู้บริโภค ช่องทางการร้องเรียน ความพึงพอใจของลูกค้า การขายและการตลาดที่มีความรับผิดชอบ) และความรับผิดชอบต่อชุมชน/สังคม (เช่น นโยบายและแผนงานสำหรับการมีส่วนร่วมกับชุมชน การแก้ไขข้อขัดแย้ง และการสนับสนุนทางการเงินสำหรับโครงการพัฒนา)\\n\\n*   **ธรรมาภิบาล (Governance - G)**: มิตินี้เกี่ยวข้องกับความเป็นผู้นำ การควบคุมภายใน และแนวปฏิบัติที่สร้างความมั่นใจในการบริหารจัดการบริษัทอย่างมีประสิทธิภาพและมีจริยธรรม แม้จะไม่ได้ระบุรายละเอียดอย่างชัดเจนว่าเป็น \"มิติ\" แยกต่างหากในตารางที่ให้มา แต่ธรรมาภิบาลก็ถูกครอบคลุมโดยนัยใน \"ข้อมูล ESG\" และตัวชี้วัดที่เกี่ยวข้อง ซึ่งครอบคลุมถึงวิธีการที่บริษัทถูกชี้นำและควบคุม รวมถึงแง่มุมต่างๆ เช่น โครงสร้างและความหลากหลายของคณะกรรมการ ค่าตอบแทนผู้บริหาร ความเป็นอิสระของคณะกรรมการตรวจสอบ สิทธิของผู้ถือหุ้น นโยบายต่อต้านการติดสินบนและการทุจริต และความโปร่งใสในการรายงาน ตัวชี้วัดเฉพาะที่กล่าวถึงในบริบท เช่น นโยบายและแนวทางการรักษาความมั่นคงทางไซเบอร์และการคุ้มครองข้อมูลส่วนบุคคล และการบริหารจัดการคุณภาพผลิตภัณฑ์ ล้วนอยู่ภายใต้แนวปฏิบัติธรรมาภิบาลที่ดี\\n\\n**วัตถุประสงค์และความสำคัญของ ESG:**\\n\\nข้อมูล ESG มีความสำคัญอย่างยิ่งเนื่องจากธุรกิจต้องเผชิญกับความเสี่ยงและความท้าทายทางเศรษฐกิจ สังคม และสิ่งแวดล้อมที่ซับซ้อนมากขึ้นเรื่อยๆ ข้อมูลนี้ให้ความเข้าใจที่ครอบคลุมทุกมิติเกี่ยวกับการดำเนินงานของบริษัท ซึ่งนอกเหนือไปจากผลประกอบการทางการเงิน\\n*   **สำหรับบริษัท**: การเข้าถึงข้อมูล ESG ช่วยในการตัดสินใจทางธุรกิจและการพัฒนาองค์กร ช่วยดึงดูด \"นักลงทุนคุณภาพ\" ที่มองหาศักยภาพทางธุรกิจระยะยาวและสามารถสร้างมูลค่าเพิ่มได้\\n*   **สำหรับนักลงทุน**: ESG นำเสนอข้อมูลที่หลากหลายและครอบคลุมสำหรับการตัดสินใจลงทุนอย่างมีข้อมูล ช่วยให้พวกเขาสามารถประเมินความเสี่ยงและโอกาสที่เกี่ยวข้องกับผลการดำเนินงานด้านความยั่งยืนของบริษัท\\n*   **สำหรับผู้เชี่ยวชาญด้านหลักทรัพย์**: พวกเขาใช้ข้อมูล ESG เพื่อวิเคราะห์ความเสี่ยงและโอกาสในการลงทุนในธุรกิจที่ปฏิบัติตามมาตรฐาน ESG\\n*   **สำหรับผู้มีส่วนได้ส่วนเสีย**: หน่วยงานกำกับดูแลและผู้ประเมินความยั่งยืนใช้ข้อมูล ESG เพื่อกำหนดนโยบายที่เกี่ยวข้องและส่งเสริมแนวปฏิบัติที่ยั่งยืนในภาคส่วนต่างๆ\\n\\nบริษัทมักจะจัดทำรายงานความยั่งยืนโดยใช้กรอบการรายงานที่เป็นที่ยอมรับ เช่น มาตรฐาน Global Reporting Initiative (GRI) และตัวชี้วัด ESG เฉพาะ (เช่น ตัวชี้วัด ESG พื้นฐาน 122 ตัวที่ระบุในบริบท) ซึ่งอาจรวมถึงตัวชี้วัดหลักและตัวชี้วัดที่แนะนำเพื่อให้สอดคล้องกับข้อกำหนดการเปิดเผยข้อมูลของผู้มีส่วนได้ส่วนเสีย การรายงานนี้สร้างความไว้วางใจและดึงดูดความสนใจจากผู้มีส่วนได้ส่วนเสียในวงกว้าง โดยแสดงให้เห็นถึงความมุ่งมั่นของบริษัทต่อความยั่งยืนในระยะยาว', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'ai', 'name': None, 'id': 'run--54d5e5f9-08f4-4496-9adf-5ea7c58485a8-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': None}]}\n"
      ]
     }
    ],
@@ -546,7 +546,7 @@
     "\n",
     "# List of ESG questions\n",
     "esg_questions = [\n",
-    "    \"What is ESG ?\"\n",
+    "    \"ESG คืออะไร?\"\n",
     "]\n",
     "\n",
     "# Store responses\n",
@@ -555,7 +555,7 @@
     "# Posting each question to the endpoint\n",
     "for question in esg_questions:\n",
     "    payload = {\n",
-    "        \"thread_id\": \"7010\",\n",
+    "        \"thread_id\": \"7026\",\n",
     "        \"question\": question,\n",
     "        # \"prompt\": \"No matter what is asked, always answer: 'I will get back to you'\"\n",
     "    }\n",
