--- a/test.ipynb
+++ b/test.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +230,10 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  97.63549971580505\n",
+      "Time taken to upload files:  220.29186701774597\n",
       "Status Code: 202\n",
-      "Response Headers: {'date': 'Sun, 06 Jul 2025 15:44:09 GMT', 'server': 'uvicorn', 'content-length': '107', 'content-type': 'application/json'}\n",
-      "Response Text (content): {\"message\":\"Successfully started processing for 1 files. Question evolution is running in the background.\"}\n"
+      "Response Headers: {'date': 'Mon, 07 Jul 2025 14:22:52 GMT', 'server': 'uvicorn', 'content-length': '134', 'content-type': 'application/json'}\n",
+      "Response Text (content): {\"message\":\"Successfully started processing for 1 files. Question evolution for docs ['ISO_14001.pdf'] is running in the background.\"}\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
     "url = \"http://127.0.0.1:5050/api/v1/graph/uploadfile\" # สมมติว่าคุณใช้ port 5050 ตามที่ app/main.py กำหนด\n",
     "\n",
     "files = [\n",
-    "    ('files', ('GRI 202_ Market Presence 2016.pdf', open('./pdf/GRI 202_ Market Presence 2016.pdf', 'rb'), 'application/pdf'))\n",
+    "    ('files', ('ISO_14001.pdf', open('./pdf/ISO_14001.pdf', 'rb'), 'application/pdf'))\n",
     "]\n",
     "print(\"Uploading files...\")\n",
     "start = time.time()\n",
